Wed Dec 16 12:52:55 EST 1998 The Rasterman <raster@redhat.com>
	* removed win95 and Motif themes - replace with Notif and Redmond95 
	  - otherwise the same.

1998-11-07  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in: Unify all subdir `configure.in's here.

Mon Oct 19 12:11:28 1998  Owen Taylor  <otaylor@redhat.com>

	* Add in ltconfig and ltmain.sh with correct shldeps
	patches.

1998-10-17    <jrb@aware-of-vacuity.labs.redhat.com>

	* (theme)/configure.in: changed AC_INIT field.

Sat Oct 17 00:35:10 1998  Owen Taylor  <otaylor@redhat.com>

	* */*.[ch]: Removed unused code for handling
	RC data, made functions	static to reduce damage from g_module's
	RTLD_GLOBAL. Removed theme_set_background functions
	which were just cut 'n paste code from GTK+.

	* */*.h: Removed unused, obsolete header files.
	
Tue Sep  1 00:12:12 CDT 1998  Frank Belew <frb@umr.edu>

	* Makefile.am: added support for new imlib.m4
	* configure.in: added support for new imlib.m4

Fri Aug 21 19:08:25 1998  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am: Added support for metal theme. 
	  Install/distribute gtkrc's for each theme.

Thu Aug 20 18:25:07 EDT 1998 The Rasterman <raster@redhat.com>
	
	* added metal theme, fixed pixmap theme now to use pixmap path -
	  and removed lots of annoying print's, added gtkr's for each
	  theme data.. now all your rc needs to do is include these rc's.

Mon Aug 17 20:32:53 1998  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am, pixmap/Makefile.am: Switch back to using automake,
	  fix things up to make dist properly.

	* pixmap_theme.h: Rationalized.
	* win95_theme.h motif_theme.h: Removed

	* Started ChangeLog.

Thu Jul 30 14:51:34 EDT 1998 The Rasterman <raster@redhat.com>
	
	* Moved all the themes to install cleanly the engine *.so's in
	  $(exec_prefix)/lib/gtk/themes/engines/ .
	  All the data for themes is now installed in 
	  $(exec_prefix)/share/gtk/themes/theme_name/
	  All things build using GNU configure and autoconf and libtool now.