@@ -9,6 +9,15 @@ AM_MAINTAINER_MODE
 
 AC_CANONICAL_HOST
 
+dnl proper defaults for gmodule based stuff
+if test "x$enable_static" != "xyes"; then
+  enable_static=no
+fi
+
+if test "x$enable_shared" != "xno"; then
+  enable_shared=yes
+fi
+
 # Checks for programs.
 AC_PROG_CC
 AM_PROG_CC_STDC
@@ -18,10 +27,11 @@ AC_PROG_MAKE_SET
 dnl Initialize libtool
 AM_PROG_LIBTOOL
 
-AM_PATH_GTK(1.1.0, , 
+AM_PATH_GTK(1.1.5, , 
 	AC_MSG_ERROR([*** GTK 1.1 not installed - please install first ***]))
 AM_PATH_GDK_IMLIB(1.8, ,
         AC_MSG_ERROR([*** IMLIB 1.8 not installed - please install first ***]))
+
 # Checks for header files.
 AC_HEADER_STDC
 
@@ -50,5 +60,3 @@ redmond95/Makefile
 redmond95/Theme/Makefile
 redmond95/Theme/gtk/Makefile
 ])
-
-
